# kolesky

./: .gitignore  Dockerfile  MANIFEST.in  README.md  environment.yml  jax_test.py  plot.py  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py  test_nugget.py  test_order.py
.github/workflows/: build-wheels.yml
kolesky/: __init__.py  chol.pyx  cholesky.py  gp_regresssion.py  jax_cholesky.py  kernels.pyx  kl_cholesky.py  nugget.pyx  ordering.pyx
kolesky.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
kolesky/_cordering/: mkl.pxd  ordering.pyx
