[build-system]
requires = ["setuptools", "wheel", "numpy", "cython"]
build-backend = "setuptools.build_meta"
[project]
name = "kolesky"
authors = [{name = "Raymond Zeng", email = "rzeng42@gatech.edu"}]
#dependencies = ["numpy", "scipy", "scikit-learn", "mkl>=2021.4.0", "tbb-devel>=2021.11.0", "libblas", "liblapack", "libzlib", "fftw", "hdf5==1.10.*", "gsl", "cgal-cpp"]
dependencies = ["numpy", "scipy", "scikit-learn", "mkl>=2021.4.0"]
readme = "README.md"
version = "0.1.3"
requires-python = ">= 3.10"
[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"